[package]
name = "Trackr"
description = "Live train tracking, on Discord. Powered by Rust."
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"

[dependencies.serenity]
version = "0.12"
features = ["framework", "standard_framework", "rustls_backend", "interactions_endpoint"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]