[package]
name = "Trackr"
description = "Live train tracking, on Discord. Powered by Rust."
version = "0.1.1"
edition = "2021"

[dependencies]
poise = "0.6.1"
serde_json = "1.0.138"
serde_with = "3.12.0"
tracing-subscriber = "0.3.19"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono"
] }
dotenv = "0.15.0"
chrono-humanize = "0.2.3"
tracing = "0.1.41"

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.12"
features = ["json"]

[dependencies.serenity]
version = "0.12"
features = [
    "framework",
    "standard_framework",
    "rustls_backend",
    "interactions_endpoint",
]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
