[package]
name = "Trackr"
description = "Live train tracking, on Discord. Powered by Rust."
version = "0.1.1"
edition = "2021"

[dependencies]
poise = { version = "0.6.1" }
serde_json = "1.0.140"
serde_with = "3.12.0"
tracing-subscriber = "0.3.19"
jsonptr = { version = "0.7.1", features = ["serde", "json", "resolve"]}
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono"
] }
dotenv = "0.15.0"
tracing = "0.1.41"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.15"
features = ["json"]

[dependencies.serenity]
version = "0.12"
features = [
    "framework",
    "standard_framework",
    "rustls_backend",
    "interactions_endpoint",
    "builder",
    "collector"
]

[dependencies.tokio]
version = "1.44.2"
features = ["macros", "rt-multi-thread"]
